force-app/main/default/objects/Email_Validator_Service__mdt.object
<CustomObject>
    <description>Used to extend the Email Validation functionality to different services.
It allows mapping of Service Names to Apex classes implementing our interface.</description>
    <label>Email Validator Service</label>
    <pluralLabel>Email Validator Services</pluralLabel>
</CustomObject>