force-app/main/default/objects/Email_Validator_Service__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>