force-app/main/default/objects/Email_Validator_Service__mdt/fields/APIKey_SettingName__c.field-meta.xml
<CustomField>
    <fullName>APIKey_SettingName__c</fullName>
    <description>Name of the record containing the API key within the Protected Settings</description>
    <inlineHelpText>Name of the record containing the API key within the Protected Settings</inlineHelpText>
    <label>API Key Setting Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>